# CZXing

./: .gitignore  README.md  build.gradle  czxing.jks  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/devilsen/czxing/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cascade.xml  cascade1.xml
app/src/main/cpp/: BarcodeReader.cpp  CMakeLists.txt  JNIUtils.cpp  JNIUtils.h  OpencvProcessor.cpp  OpencvProcessor.h  native-lib.cpp  yuv2bmp.c  yuv2bmp.h
app/src/main/cpp/zxing/src/: Result.h
app/src/main/java/me/devilsen/czxing/: BarCodeUtil.java  BarcodeReader.java  CameraHelper.java  CameraHelper2.java  MainActivity.java  MyApplication.java  SaveImageUtil.java  ScanActivity.java  Test.java  TestScanActivity.java
app/src/main/java/me/devilsen/czxing/camera/: CameraConfigurationManager.java  CameraHelper.java  CameraSurface.java  CameraUtil.java  ICamera.java  SensorController.java
app/src/main/java/me/devilsen/czxing/processor/: BarcodeProcessor.java  CameraDataProcessor.java  Processor.java
app/src/main/java/me/devilsen/czxing/thread/: Callback.java  Dispatcher.java  ExecutorUtil.java  FrameData.java  ProcessRunnable.java
app/src/main/java/me/devilsen/czxing/view/: BarCoderView.java  ScanBoxView.java  ScanListener.java  ScanView.java  ZXingView2.java
app/src/main/res/layout/: activity_camera_scan.xml  activity_main.xml  activity_test_scan.xml  activity_test_scan_view.xml
app/src/main/res/values/: colors.xml  styles.xml
czxing/: .gitignore  bintrayUpload.gradle  build.gradle  public-maven.gradle
czxing/src/main/: AndroidManifest.xml
czxing/src/main/assets/: qrcode_cascade.xml  qrcode_cascade_by_camara_smaple_4.xml  qrcode_coco.txt
czxing/src/main/cpp/: CMakeLists.txt  CZXingJNI.cpp  DataStruct.h  DecodeScheduler.cpp  DecodeScheduler.h  ImageScheduler.cpp  ImageScheduler.h  ImageUtil.cpp  ImageUtil.h  JNIUtils.cpp  JNIUtils.h  JavaCallHelper.cpp  JavaCallHelper.h  JniHelper.cpp  JniHelper.h  MatUtils.h  Mutex.h  OpencvProcessor.cpp  OpencvProcessor.h  QRCodeRecognizer.cpp  QRCodeRecognizer.h  ScanResult.cpp  ScanResult.h  ThreadPool.h  config.h  native-lib.cpp  safe_queue.h
czxing/src/main/cpp/include/opencv2/: cvconfig.h  wechat_qrcode.hpp
czxing/src/main/cpp/include/zbar/: zbar.h
czxing/src/main/cpp/wechat/: CMakeLists.txt
czxing/src/main/cpp/zxing/: CMakeLists.txt  buildZXingCore.sh
czxing/src/main/cpp/zxing/src/: DecodeHints.h  DecodeStatus.h  DetectorResult.h  MultiFormatReader.cpp  MultiFormatReader.h  Result.cpp  Result.h
czxing/src/main/cpp/zxing/src/qrcode/: QRDetector.cpp  QRFinderPatternFinder.cpp  QRFormatInformation.h  QRReader.cpp  QRWriter.cpp
czxing/src/main/java/me/devilsen/czxing/: BarcodeFormat.java  BarcodeReader.java  BarcodeWriter.java  ResultActivity.java  ScanActivity.java  ScanBoxTestActivity.java  Scanner.java  ScannerManager.java
czxing/src/main/java/me/devilsen/czxing/camera/: CameraConfigurationManager.java  CameraSize.java  CameraSurface.java  ScanCamera.java  SensorController.java
czxing/src/main/java/me/devilsen/czxing/code/: BarcodeDecoder.java  BarcodeFormat.java  BarcodeReader.java  BarcodeWriter.java  CodeResult.java  DecodeEngine.java  EncodeEngine.java  NativeSdk.java
czxing/src/main/java/me/devilsen/czxing/compat/: ActivityCompat.java  BarRequiresApi.java  ContextCompat.java  DragAndDropPermissionsCompat.java
czxing/src/main/java/me/devilsen/czxing/processor/: BarcodeProcessor.java  Processor.java
czxing/src/main/java/me/devilsen/czxing/tflite/: Classifier.java  YoloV4Classifier.java
czxing/src/main/java/me/devilsen/czxing/thread/: Callback.java  Dispatcher.java  ExecutorUtil.java  FrameData.java  ProcessRunnable.java
czxing/src/main/java/me/devilsen/czxing/util/: AssetUtil.java  BarCodeUtil.java  BitmapUtil.java  Camera2Helper.java  CameraUtil.java  ImageUtils.java  ResolutionAdapter.java  ResolutionAdapterUtil.java  SaveImageUtil.java  ScreenUtil.java  SensorController.java  SoundPlayer.java  SoundPoolUtil.java
czxing/src/main/java/me/devilsen/czxing/view/: AutoFitSurfaceView.java  BarCoderView.java  PointView.java  ScanActivityDelegate.java  ScanBoxView.java  ScanListener.java  (+1 more)
czxing/src/main/res/drawable/: background_button.xml  background_touch_view.xml  bar_recoder_scan_line.xml  ic_arrow_back_white_24dp.xml  ic_baseline_arrow_forward_24.xml  ic_flashlight.xml  ic_highlight_black_24dp.xml  ic_highlight_black_close_24dp.xml  ic_highlight_black_open_24dp.xml  ic_highlight_open_24dp.xml  ic_outline_highlight_24.xml
czxing/src/main/res/layout/: activity_camera_scan.xml  activity_scan_result.xml  view_scan_layout.xml
czxing/src/main/res/values/: colors.xml  strings.xml  styles.xml
czxing/src/main/res/values-en/: strings.xml
czxing/src/test/java/me/devilsen/czxing/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
python/: Labeler.py  QR_Code_Position.py  QR_Extractor.py  main.py
sample/: build.gradle  proguard-rules.pro
sample/src/androidTest/java/me/sam/czxing/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/me/sam/czxing/: BaseDecoderActivity.java  CallBackTestActivity.java  CustomizeActivity.java  DelegateActivity.java  DetectTestActivity.java  MainActivity.java  MyApplication.java  MyCardActivity.java  ScanBoxTestActivity.java  Utils.java  WriteCodeActivity.java  WriteQRCodeActivity.java
sample/src/main/res/drawable/: ic_highlight_blue_open_24dp.xml  ic_highlight_white_close_24dp.xml  ic_launcher_foreground.xml  ic_spa_black_24dp.xml  ic_toys_black_24dp.xml  ic_whatshot_black_24dp.xml
sample/src/main/res/layout/: activity_callback_test.xml  activity_customize_scan.xml  activity_delegate.xml  activity_main.xml  activity_my_card.xml  activity_test_camera2_surface.xml  activity_test_detect.xml  activity_test_scan_view.xml  activity_write_code.xml  activity_write_code_2.xml
sample/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
sample/src/test/java/me/sam/czxing/: ExampleUnitTest.java
(+28 files in other folders)
